@@ -1,3 +1,8 @@
+2009-06-22  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* spu-tdep.c (spu_get_longjmp_target): New function.
+	(spu_gdbarch_init): Install it.
+
 2009-06-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR server/10306
